Docker-Compose orchestrator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=weather-forecast
 server.port=8080
 spring.sleuth.sampler.probability=1.0
-open-weather.endpoint=https://api.openweathermap.org
-open-weather.path=/data/2.5/weather
-open-weather.appId=put-your-app-id
+spring.zipkin.baseUrl=http://localhost:9411
+openweather.endpoint=https://api.openweathermap.org
+openweather.path=/data/2.5/weather
+openweather.appId=put-your-app-id
