--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
 	id 'org.springframework.boot' version '2.1.6.RELEASE'
 	id 'java'
+	id 'com.google.cloud.tools.jib' version '1.4.0'
+
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -27,5 +29,17 @@ dependencies {
 dependencyManagement {
 	imports {
 		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
+}
+
+jib {
+	from {
+		image = 'openjdk:12-alpine'
+	}
+	to {
+		image = 'barret73/weather-forecast'
+	}
+	container {
+		useCurrentTimestamp = true
 	}
 }
